--- a/hiera.yaml
+++ b/hiera.yaml
@@ -1,7 +1,8 @@
 ---
-nginx::package_ensure: 'present'
-nginx::config_ensure: 'present'
-nginx::config_dir_path: '/etc/nginx'
-nginx::config_file_path: '/etc/nginx/nginx.conf'
-nginx::log_dir_path: '/var/log/nginx'
-nginx::service_ensure: 'running'
+version: 5
+defaults:
+  datadir: data
+  data_hash: yaml_data
+hierarchy:
+  - name: "common"
+    path: "common.yaml"
